cloud_native/week_8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myweb
  labels:
    run: myweb
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: myweb
